# popol

./: .gitignore  .travis.yml  CONTRIBUTING  Cargo.toml  Readme.md
.github/workflows/: pr-checks.yaml
examples/: stdin.rs  tcp-listener.rs  tcp.rs
src/: lib.rs
