[package]
name = "popol"
description = "Minimal non-blocking I/O"
readme = "Readme.md"
repository = "https://github.com/cloudhead/popol"
homepage = "https://github.com/cloudhead/popol"
documentation = "https://docs.rs/popol"
keywords = ["io", "poll", "async"]
version = "0.3.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
libc = "0.2.71"
